packages/babel-parser/test/fixtures/es2025/import-attributes/valid-syntax-export-with-attributes/input.js
export { default as foo } from "foo.json" with { type: "json" };
