packages/babel-parser/test/fixtures/es2025/import-attributes/invalid-syntax-export-with-repeated-type/input.js
export { default as foo } from "foo.json" with { type: "json", type: "html" };
